tests/ui/impl-trait/issue-100075.stderr
error: cannot resolve opaque type
  --> $DIR/issue-100075.rs:13:37
   |
LL | fn _g<T>(t: &'static T) -> &'static impl Marker {
   |                                     ^^^^^^^^^^^

error: aborting due to 1 previous error

